--- a/brief_2_salary_data.ipynb
+++ b/brief_2_salary_data.ipynb
@@ -238,20 +238,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 129,
    "outputs": [],
    "source": [
-    "data_2021_2023_copy.to_csv(\"Sal ary_2021_2023.csv\")\n",
-    "data_2017_2020_copy.to_csv(\"Salary_2017_2020.csv2\")\n"
+    "#cleaning dtype\n",
+    "data_2017_2020_copy = data_2017_2020_copy.copy()\n",
+    "data_2017_2020_copy['SalaryUSD'] = data_2017_2020_copy['SalaryUSD'].apply(lambda x : x.replace(\"$\", \"\"))\n",
+    "data_2017_2020_copy['SalaryUSD'] = data_2017_2020_copy['SalaryUSD'].apply(lambda x : x.replace(\",\", \"\"))\n",
+    "data_2017_2020_copy['SalaryUSD'] = data_2017_2020_copy['SalaryUSD'].apply(lambda x : x.replace(\" \", \"\"))\n",
+    "data_2017_2020_copy['SalaryUSD'] = data_2017_2020_copy['SalaryUSD'].apply(lambda x : x.replace(\".\", \"\"))\n",
+    "data_2017_2020_copy['SalaryUSD'] = data_2017_2020_copy['SalaryUSD'].apply(lambda x : x.replace(\".00\", \"\"))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-24T14:42:46.521070400Z",
-     "start_time": "2023-10-24T14:42:46.446207900Z"
+     "end_time": "2023-10-25T07:09:12.537334100Z",
+     "start_time": "2023-10-25T07:09:12.519193200Z"
+    }
+   },
+   "id": "5f9fecc46fd3e10e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "dtype('int32')"
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert object in int\n",
+    "data_2017_2020_copy['SalaryUSD'] = data_2017_2020_copy['SalaryUSD'].astype(int).copy()\n",
+    "data_2017_2020_copy['SalaryUSD'].dtypes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-25T07:09:14.694203200Z",
+     "start_time": "2023-10-25T07:09:14.684757900Z"
+    }
+   },
+   "id": "461e3d2aff4951d5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "outputs": [],
+   "source": [
+    "# separating status jobs\n",
+    "status_salary_2017_2020 = data_2017_2020_copy.copy()\n",
+    "status_salary_2017_2020['Full_time'] = status_salary_2017_2020['EmploymentStatus'].apply(lambda x: 'Full time' if x == 'Full time' else '')\n",
+    "status_salary_2017_2020['Part_time'] = status_salary_2017_2020['EmploymentStatus'].apply(lambda x: 'Part time' if x == 'Part time' else '')\n",
+    "status_salary_2017_2020['Freelance'] = status_salary_2017_2020['EmploymentStatus'].apply(lambda x: 'Freelance' if x == 'Freelance' else '')\n",
+    "status_salary_2017_2020['Contract'] = status_salary_2017_2020['EmploymentStatus'].apply(lambda x: 'Contract' if x == 'Contract' else '')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-25T07:09:28.957266100Z",
+     "start_time": "2023-10-25T07:09:28.942892300Z"
+    }
+   },
+   "id": "2fb9e7c8ad2532ec"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "93.33929827431078"
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#taux full time\n",
+    "full_time_salaries = status_salary_2017_2020[status_salary_2017_2020['Full_time'] == 'Full time']['SalaryUSD'].sum()\n",
+    "salary_2017_2020 = status_salary_2017_2020['SalaryUSD'].sum()\n",
+    "taux_full_time = full_time_salaries/salary_2017_2020*100\n",
+    "taux_full_time"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-25T07:09:39.564317200Z",
+     "start_time": "2023-10-25T07:09:39.539781Z"
+    }
+   },
+   "id": "7de4973e038d1d62"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4.610087386457996"
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#taux contract\n",
+    "contract_salaries = status_salary_2017_2020[status_salary_2017_2020['Contract'] == 'Contract']['SalaryUSD'].sum()\n",
+    "taux_contract = contract_salaries/salary_2017_2020*100\n",
+    "taux_contract   "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-25T07:15:17.481794Z",
+     "start_time": "2023-10-25T07:15:17.466777700Z"
+    }
+   },
+   "id": "2d168af5c2799cd9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1.7265421015193214"
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#taux freelance\n",
+    "freelance_salaries = status_salary_2017_2020[status_salary_2017_2020['Freelance'] == 'Freelance']['SalaryUSD'].sum()\n",
+    "taux_freelance = freelance_salaries/salary_2017_2020*100\n",
+    "taux_freelance"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-25T07:15:17.823149Z",
+     "start_time": "2023-10-25T07:15:17.811624600Z"
+    }
+   },
+   "id": "112024ef09fa1e3a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "outputs": [],
+   "source": [
+    "data_2021_2023_copy.to_csv(\"Salary_2021_2023.csv\")\n",
+    "data_2017_2020_copy.to_csv(\"Salary_2017_2020.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-25T07:17:09.948879500Z",
+     "start_time": "2023-10-25T07:17:09.887564400Z"
     }
    },
    "id": "ed42fb8da2e59b43"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "628bfc0600c15532"
   }
  ],
  "metadata": {
