--- a/brief_2_salary_data.ipynb
+++ b/brief_2_salary_data.ipynb
@@ -460,6 +460,30 @@
    "id": "21859f3db30357bd"
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f46180229db05a7b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "outputs": [],
+   "source": [
+    "data_2021_2023_copy['work_year'] = pd.to_datetime(data_2021_2023_copy['work_year'], format='%Y')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-26T08:45:50.212682300Z",
+     "start_time": "2023-10-26T08:45:50.184603400Z"
+    }
+   },
+   "id": "83575149a0d80041"
+  },
+  {
    "cell_type": "code",
    "execution_count": 134,
    "outputs": [],
@@ -475,16 +499,6 @@
     }
    },
    "id": "ed42fb8da2e59b43"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "435712ad5f5ed175"
   }
  ],
  "metadata": {
